update: victoriametrics db

--- a/.env.example
+++ b/.env.example
@@ -16,10 +16,10 @@ DB_POOL_MAX=10
 PUPPETEER_HEADLESS=true
 PUPPETEER_TIMEOUT=30000
 
-# Ollama Configuration (for future Text-to-SQL)
+# Ollama Configuration (for Text-to-SQL and MetricsQL)
 OLLAMA_ENABLED=false
 OLLAMA_HOST=http://localhost:11434
-OLLAMA_MODEL=sqlcoder
+OLLAMA_MODEL=qwen2.5-coder:7b
 
 # Report Configuration
 REPORT_TIMEOUT=60000
