update: env file

--- a/.env.example
+++ b/.env.example
@@ -1,25 +1,29 @@
-# Server Configuration
-NODE_ENV=development
-SERVER_PORT=3000
-HOST=http://localhost:3000
+# ===========================================
+# IoT Report Service - Environment Configuration
+# ===========================================
+# Copy this file to .env and update with your values
+# NEVER commit .env to git - it contains secrets!
 
-# Database Configuration (PostgreSQL/TimescaleDB)
-DB_HOST=localhost
-DB_PORT=5432
-DB_NAME=iot_reports
-DB_USER=postgres
-DB_PASSWORD=postgres
-DB_POOL_MIN=2
-DB_POOL_MAX=10
+# Server Configuration
+NODE_ENV=production
+SERVER_PORT=3000
+HOST=https://your-domain.com
+
+# VictoriaMetrics Configuration
+# Local instance (if running in docker-compose)
+VICTORIA_METRICS_LOCAL_URL=http://victoriametrics:8428
+
+# External VictoriaMetrics instance (production)
+VICTORIA_METRICS_EXTERNAL_URL=https://your-victoriametrics-url/v1/vm
+VICTORIA_METRICS_EXTERNAL_TOKEN=your-token-here
+
+# Default data source: 'local' or 'external'
+VICTORIA_METRICS_DEFAULT_SOURCE=external
 
 # Puppeteer Configuration
 PUPPETEER_HEADLESS=true
 PUPPETEER_TIMEOUT=30000
-
-# Ollama Configuration (for Text-to-SQL and MetricsQL)
-OLLAMA_ENABLED=false
-OLLAMA_HOST=http://localhost:11434
-OLLAMA_MODEL=qwen2.5-coder:7b
+PUPPETEER_EXECUTABLE_PATH=/usr/bin/chromium-browser
 
 # Report Configuration
 REPORT_TIMEOUT=60000
@@ -28,3 +32,17 @@ MAX_REPORT_SIZE_MB=50
 # Logging
 LOG_LEVEL=info
 LOG_FILE=logs/app.log
+
+# Optional: Ollama (AI features - disabled by default)
+OLLAMA_ENABLED=false
+OLLAMA_HOST=http://localhost:11434
+OLLAMA_MODEL=qwen2.5-coder:7b
+
+# Optional: Database (only if using TimescaleDB)
+# DB_HOST=localhost
+# DB_PORT=5432
+# DB_NAME=madison_iot
+# DB_USER=postgres
+# DB_PASSWORD=postgres
+# DB_POOL_MIN=2
+# DB_POOL_MAX=10
