update: test deploy

--- a/.env.example
+++ b/.env.example
@@ -7,17 +7,11 @@
 # Server Configuration
 NODE_ENV=production
 SERVER_PORT=3000
-HOST=https://your-domain.com
+HOST=http://localhost:3000
 
-# VictoriaMetrics Configuration
-# Local instance (if running in docker-compose)
-VICTORIA_METRICS_LOCAL_URL=http://victoriametrics:8428
-
-# External VictoriaMetrics instance (production)
+# VictoriaMetrics Configuration (External only)
 VICTORIA_METRICS_EXTERNAL_URL=https://your-victoriametrics-url/v1/vm
 VICTORIA_METRICS_EXTERNAL_TOKEN=your-token-here
-
-# Default data source: 'local' or 'external'
 VICTORIA_METRICS_DEFAULT_SOURCE=external
 
 # Puppeteer Configuration
@@ -32,11 +26,6 @@ MAX_REPORT_SIZE_MB=50
 # Logging
 LOG_LEVEL=info
 LOG_FILE=logs/app.log
-
-# Optional: Ollama (AI features - disabled by default)
-OLLAMA_ENABLED=false
-OLLAMA_HOST=http://localhost:11434
-OLLAMA_MODEL=qwen2.5-coder:7b
 
 # Optional: Database (only if using TimescaleDB)
 # DB_HOST=localhost
